all sections done

--- a/index.html
+++ b/index.html
@@ -29,6 +29,45 @@
          <img src="./placeholder.jog.png">
      </div>
     </header>
+    <div class="two">
+        <h3>Some random information.</h3>
+        <div class="images">
+         <div class="chunk">
+          <img src="./whiteimage.png" alt="barberry">
+          <div class="text">This is some subtext.</div>
+         </div>
+         <div class="chunk">
+          <img src="./whiteimage.png" alt="chili">
+          <div class="text">This is some subtext.</div>
+         </div>
+         <div class="chunk">
+          <img src="./whiteimage.png" alt="pepper">
+          <div class="text">This is some subtext.</div>
+         </div>
+         <div class="chunk">
+          <img src="./whiteimage.png" alt="saffron">
+          <div class="text">This is some subtext.</div>
+         </div>
+        </div>
+    </div>
+    <div class="three">
+        <div class="quote">
+        <h3>Whoop that Trick</h3>
+        </div>
+        <h4>-Steph Curry, Golden State Warriors</h4>
+    </div>
+    <div class="four">
+        <div class="banner">
+            <div class="text">
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div>Copyright &copy; The Odin Project 2022</div>
+      </div>
     
 </body>
 </html>
